<resources>
    <string name="app_name">Xplor Pay</string>
    <string name="title_payment">Payment</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_batches">Batches</string>
    <string name="title_settings">Settings</string>
    <string name="title_info">Info</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="no_access_dialog_title">Info</string>
    <string name="no_access_dialog_description">Your user does not have permission to this application. With your business owner, please contact support at 866–435–0666 for help.</string>

    <string name="logout_dialog_title">Info</string>
    <string name="logout_dialog_description">You\'ve been logged out due to inactivity</string>

    <string name="merchant_changed_dialog_title">No terminal selected</string>
    <string name="merchant_changed_dialog_description">You recently changed the merchant, please select also a terminal.</string>

    <!-- Home screen -->
    <string name="battery_life">%1$d%%</string>
    <string name="charge_amount">Charge %1$s</string>
    <string name="no_reader_message">No reader connected</string>
    <string name="status_no_device_connected">Please select a reader to connect</string>
    <string name="status_idle">Idle</string>
    <string name="device_signal_connected">Connected</string>
    <string name="charge_amount_hint">$0.00</string>
    <string name="payment_method_reader">Card reader</string>
    <string name="payment_method_manual">Manual entry</string>
    <string name="numpad_key_1">1</string>
    <string name="numpad_key_2">2</string>
    <string name="numpad_key_3">3</string>
    <string name="numpad_key_4">4</string>
    <string name="numpad_key_5">5</string>
    <string name="numpad_key_6">6</string>
    <string name="numpad_key_7">7</string>
    <string name="numpad_key_8">8</string>
    <string name="numpad_key_9">9</string>
    <string name="numpad_key_0">0</string>
    <string name="numpad_key_clear">clear</string>

    <!-- Settings screen -->
    <string name="environment_production">PROD</string>
    <string name="environment_sandbox">SANDBOX</string>
    <string name="label_url">URL</string>
    <string name="label_public_key">Public key</string>
    <string name="label_api_key">API key</string>
    <string name="hidden_key">*****%1$s</string>
    <string name="version_number_format">Version number: v%1$s</string>
    <string name="button_save_keys_text">SAVE</string>
    <string name="button_view_logs_text">VIEW LOGS</string>
    <string name="button_delete_logs_text">DELETE LOGS</string>
    <string name="button_share_logs_text">SHARE LOGS</string>
    <string name="first_reader_button_text">Pair new reader</string>
    <string name="hints_skip_pairing_button_text">Skip pairing for now</string>
    <string name="first_pairing_tip_text">Lets start by pairing your reader with your mobile app. Click on the button above.</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="logout_confirm_title">Are you sure you want to log out?</string>
    <string name="keys_alert_title">Info</string>
    <string name="keys_alert_message">Please make sure the API Key and Public Key are properly set in the More section</string>
    <string name="keys_update_message">New values were saved.</string>
    <string name="offline_mode_enabled_text">Offline mode (%1$s)</string>
    <string name="sdk_settings">SDK Settings</string>

    <!-- Info screen -->
    <string name="info_screen_description">We are here to help</string>
    <string name="info_screen_call_message">Call: %1$s (8am - 12am EST)</string>
    <string name="info_screen_terms_and_conditions"><u>Terms and conditions</u></string>
    <string name="info_screen_call_button_text">Call Support</string>
    <string name="info_screen_about">About</string>
    <string name="info_screen_app_version">App version: %1$s</string>
    <string name="info_screen_update_button_text">Update</string>
    <string name="info_screen_log_out_button_text">Log Out</string>

    <!-- Merchant/Terminal selection -->
    <string name="merchant_and_terminal_selection_title">Merchant &amp; Terminal selection</string>
    <string name="merchant">Merchant</string>
    <string name="merchants">Merchants</string>
    <string name="terminal">Terminal</string>
    <string name="terminals">Terminals</string>
    <string name="search">Search</string>
    <string name="see_more">See more</string>
    <string name="no_eligible_terminal_available">Looks like you don\'t have a terminal setup. Please contact your sales agent now to get one set up. If you don\'t have a sales agent, call %1$s for help.</string>
    <string name="no_eligible_terminal_available_contact_number">866.435.0666</string>
    <string name="no_eligible_terminal_warning">No terminal available</string>

    <!-- Offline mode -->
    <string name="bypass_login_description">You can run transactions without internet in offline mode. Click below to proceed and begin taking transactions in offline mode.</string>
    <string name="proceed">Proceed</string>
    <string name="internet_restored">Internet has been restored, please log in.</string>
    <string name="no_internet">No internet connection.</string>

    <!-- Transactions page  -->
    <string name="transactions_title">Transactions</string>

    <!--  Okta login  -->
    <string name="login_button">Login</string>
    <string name="logout_of_browser_button">Logout of Browser</string>
    <string name="minimize_view">Minimize view icon</string>
    <string name="right_icon">Right icon</string>
    <string name="failed_to_update">Failed to update. Please try again.</string>
    <string name="batches_title">Batches</string>
    <string name="transaction_voided">Transaction voided</string>
    <string name="transaction_refunded">Transaction refunded</string>
    <string name="net_amount">Net Amount</string>
    <string name="open">Open</string>
    <string name="failed_to_update_please_try_again">Failed to update. Please try again.</string>
    <string name="cancel_button">Cancel</string>
    <string name="refund_text">Refund</string>
    <string name="success_checkmark">Success checkmark</string>
    <string name="select_terminal">Select Terminal</string>
    <string name="select_merchant">Select Merchant</string>

</resources>