<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_payment"
        android:icon="@drawable/ic_payment"
        android:title="@string/title_payment" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_transactions"
        android:title="@string/title_transactions" />

    <item
        android:id="@+id/navigation_batches"
        android:icon="@drawable/ic_batches"
        android:title="@string/title_batches" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info"
        android:title="@string/title_info" />
</menu>