<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_payment">

    <fragment
        android:id="@+id/navigation_payment"
        android:name="com.xplore.paymobile.ui.home.HomeFragment"
        android:label="@string/title_payment"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.xplore.paymobile.ui.transactions.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/navigation_batches"
        android:name="com.xplore.paymobile.ui.batches.BatchesFragment"
        android:label="@string/title_batches"
        tools:layout="@layout/fragment_batches" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.xplore.paymobile.ui.more.MoreFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_more" >
        <action
            android:id="@+id/action_navigation_settings_to_logsFragment"
            app:destination="@id/logsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.xplore.paymobile.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/logsFragment"
        android:name="com.xplore.paymobile.ui.more.LogsFragment"
        android:label="fragment_logs"
        tools:layout="@layout/fragment_logs" />
</navigation>