<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.merchantselection.search.merchant.MerchantSearchFragment">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_input_layout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
        app:startIconDrawable="@drawable/ic_search">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_edit_text"
            style="@style/TextPrimaryLight14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_search_input"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="50"
            android:padding="@dimen/padding_medium"
            android:textColorHint="@color/color_secondary"
            android:theme="@style/EditTextTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/title_upper_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/search_input_layout" />

    <TextView
        android:id="@+id/title_text_view"
        style="@style/SubtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/merchant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_upper_separator" />

    <View
        android:id="@+id/title_lower_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/title_text_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        app:layout_constraintBottom_toTopOf="@id/list_lower_separator"
        app:layout_constraintTop_toBottomOf="@id/title_lower_separator" />

    <View
        android:id="@+id/list_lower_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/ok_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ok_button"
        style="@style/ShapeAppearanceOverlay.Button.RoundedBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium_big"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>